--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,8 +1,8 @@
-<idea-plugin require-restart="true">
+<idea-plugin require-restart="false">
   <id>Tolltech.Tollrider</id>
-  <name>Tollrider</name>
+  <name>Tollride</name>
   <description>Generate JSON, EF SQL schemas description attributes for data contract objects. Introduce ILog for strings. Generate ctor calling with dummy values for class properties. Change case of string literals</description>
-  <version>2022.2.5</version>
+  <version>2022.2.6</version>
   <vendor url="https://github.com/tolltech/tollrech">tolltech</vendor>
   <idea-version since-build="222" until-build="222.*"/>
   <extensions defaultExtensionNs="com.intellij" />
